--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>탈출</title>
-    <script src="/js/script/index.js" defer></script>
+    <script src="/js/script/gb.js" defer></script>
     <style>
         .hidden-code {
             color: white;
