--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,11 @@
     <p></p>
     <input type="text" id="codeInput" placeholder="Enter code">
     <button onclick="checkCode()">Submit</button>
+<ul>
+    <li><a href="/pages/set.html">Set</a></li>
+    <li><a href="/pages/font.html">Font</a></li>
+    <li><a href="/pages/sun.html">sun</a></li>
+    <li><a href="/pages/yourself.html">yourself</a></li>
+</ul>
 </body>
 </html>
