--- a/public/index.html
+++ b/public/index.html
@@ -6,21 +6,79 @@
     <title>탈출</title>
     <script src="/js/script/gb.js" defer></script>
     <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+        }
+
+        h1 {
+            color: #333;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
         .hidden-code {
+            color: #f4f4f4;
+        }
+
+        input[type="text"] {
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            margin-bottom: 10px;
+            width: 250px;
+        }
+
+        button {
+            background-color: #4CAF50;
             color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        ul {
+            list-style: none;
+            padding: 0;
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+        }
+
+        li {
+            margin: 0 10px;
+        }
+
+        a {
+            text-decoration: none;
+            color: #333;
+            padding: 10px 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        a:hover {
+            background-color: #ddd;
         }
     </style>
 </head>
 <body>
-    <h1>관찰은 보이지 않는 것을 보는 것.(CODE:start) <span class="hidden-code">HIDDEN CODE:white</span></h1>
-    <p></p>
+    <h1>관찰은 보이지 않는 것을 보는 것. (CODE:start) <span class="hidden-code">HIDDEN CODE:white</span></h1>
+    <p>코드를 입력하여 다음 단계로 이동하세요.</p>
     <input type="text" id="codeInput" placeholder="Enter code">
     <button onclick="checkCode()">Submit</button>
-<ul>
-    <li><a href="/pages/set.html">Set</a></li>
-    <li><a href="/pages/font.html">Font</a></li>
-    <li><a href="/pages/sun.html">sun</a></li>
-    <li><a href="/pages/yourself.html">yourself</a></li>
-</ul>
+    <ul>
+        <li><a href="/pages/set.html">Set</a></li>
+        <li><a href="/pages/font.html">Font</a></li>
+        <li><a href="/pages/sun.html">sun</a></li>
+        <li><a href="/pages/yourself.html">yourself</a></li>
+    </ul>
 </body>
 </html>
