--- a/public/pages/sun.html
+++ b/public/pages/sun.html
@@ -13,6 +13,7 @@
             justify-content: center;
             align-items: center;
             transition: background-color 0.5s;
+            background-color: #ffe400;
         }
         #sun-icon {
             position: absolute;
@@ -24,14 +25,14 @@
         }
         #code-text {
             font-size: 72px;
-            color: white;
+            color: #ffe400;
             display: block;
         }
     </style>
 </head>
 <body>
     <img id="sun-icon" src="/js/images/sun.png" alt="Sun Icon">
-    <div id="code-text">CODE:START</div>
+    <div id="code-text">CODE:start</div>
     <script src="/js/script/sun.js"></script>
 </body>
 </html>
