--- a/public/pages/yourself.html
+++ b/public/pages/yourself.html
@@ -61,9 +61,9 @@
     window.checkText = checkText;
     </script>
     <input type="text" id="inputText" placeholder="나는 모든 것을 알지는 못한다.">
-    <button id="submitButton">제출</button>
+    <button onclick="checkText()">제출</button>
     <p id="result"></p>
-
+    
 
 </body>
 </html>
