--- a/public/pages/yourself.html
+++ b/public/pages/yourself.html
@@ -56,14 +56,10 @@
 </head>
 <body>
     <h1>Metacognition</h1>
-    <script type="module">
-    import { checkText } from "/js/script/yourself.js";
-    window.checkText = checkText;
-    </script>
     <input type="text" id="inputText" placeholder="나는 모든 것을 알지는 못한다.">
-    <button onclick="checkText()">제출</button>
+    <button id="submitButton">제출</button>
     <p id="result"></p>
-    
 
+    <script type="module" src="/js/script/yourself.js"></script>
 </body>
 </html>
