--- a/public/pages/yourself.html
+++ b/public/pages/yourself.html
@@ -57,9 +57,9 @@
 <body>
     <h1>Metacognition</h1>
     <input type="text" id="inputText" placeholder="나는 모든 것을 알지는 못한다.">
-    <button id="submitButton">제출</button>
+    <button onclick="checkText()">제출</button>
     <p id="result"></p>
 
-    <script type="module" src="/js/script/yourself.js"></script>
+    <script src="/js/script/yourself.js"></script>
 </body>
 </html>
