font인터페이스수정

--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,8 @@
         <li><a href="/pages/font.html">Font</a></li>
         <li><a href="/pages/sun.html">sun</a></li>
         <li><a href="/pages/yourself.html">yourself</a></li>
+        <li><a href="/pages/maketxt.html">maketxt</a></li>
+
     </ul>
 </body>
 </html>
