--- a/public/pages/font.html
+++ b/public/pages/font.html
@@ -3,26 +3,142 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Color Box</title>
+    <title>What color?</title>
     <style>
-        #color-box {
-            width: 200px;
-            height: 200px;
-            margin: 20px auto;
+        body {
+            font-family: 'Arial', sans-serif;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+            justify-content: space-between;
             align-items: center;
-            font-size: 18px;
+            height: 100vh;
+            margin: 0;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+        #textDisplay {
+            font-size: 24px;
+            font-weight: bold;
+            text-align: center;
+        }
+        .color-picker {
+            width: 100%;
+            max-width: 100%;
+            padding: 0 20px;
+            box-sizing: border-box;
+            position: fixed;
+            bottom: 20px;
+            left: 0;
+        }
+        .slider-container {
+            display: flex;
+            align-items: center;
+            margin-bottom: 15px;
+        }
+        label {
+            flex: 0 0 30px;
+            font-weight: bold;
+            text-align: right;
+            margin-right: 10px;
+        }
+        input[type="range"] {
+            flex: 1;
+            -webkit-appearance: none;
+            width: 100%;
+            height: 15px;
+            border-radius: 5px;
+            background: #d3d3d3;
+            outline: none;
+            opacity: 0.7;
+            transition: opacity .2s;
+        }
+        input[type="range"]:hover {
+            opacity: 1;
+        }
+        input[type="range"]::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 25px;
+            height: 25px;
+            border-radius: 50%;
+            cursor: pointer;
+            border: 2px solid #000;
+        }
+        input[type="range"]::-moz-range-thumb {
+            width: 25px;
+            height: 25px;
+            border-radius: 50%;
+            cursor: pointer;
+            border: none;
+        }
+        #red::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 25px;
+            height: 25px;
+            border-radius: 50%;
+            background: #FF4136; /* 빨간색 */
+            border: 2px solid #000; /* 썸의 경계선 */
+            cursor: pointer;
+        }
+
+        #green::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 25px;
+            height: 25px;
+            border-radius: 50%;
+            background: #2ECC40; /* 초록색 */
+            border: 2px solid #000;
+            cursor: pointer;
+        }
+
+        #blue::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 25px;
+            height: 25px;
+            border-radius: 50%;
+            background: #0074D9; /* 파란색 */
+            border: 2px solid #000;
+            cursor: pointer;
+        }
+        #codeInput {
+            position: fixed;
+            bottom: 70px;
+            left: 50%;
+            transform: translateX(-50%);
+            padding: 10px;
+            width: 200px;
+            display: none;
+        }
+        #submitButton {
+            position: fixed;
+            bottom: 70px;
+            left: 50%;
+            transform: translateX(110px);
+            padding: 10px;
+            display: none;
         }
     </style>
 </head>
 <body>
-    <div id="color-box" style="color: #006400; font-weight: bold; font-size: 24px;">what color?</div>
-    <div>
-        R: <input type="range" id="red" min="0" max="255" value="0"><br>
-        G: <input type="range" id="green" min="0" max="255" value="100"><br>
-        B: <input type="range" id="blue" min="0" max="255" value="0">
+
+    <div class="color-picker">
+        <div class="slider-container">
+            <label for="red">R:</label>
+            <input type="range" id="red" min="0" max="255" value="255" step="1">
+        </div>
+        <div class="slider-container">
+            <label for="green">G:</label>
+            <input type="range" id="green" min="0" max="255" value="255" step="1">
+        </div>
+        <div class="slider-container">
+            <label for="blue">B:</label>
+            <input type="range" id="blue" min="0" max="255" value="255" step="1">
+        </div>
     </div>
-    <script type="module" src="/js/script/font.js"></script>
+    <input type="text" id="codeInput" placeholder="Enter code here">
+    <script src="/js/script/font.js"></script>
 </body>
 </html>
