--- a/public/pages/font.html
+++ b/public/pages/font.html
@@ -139,6 +139,7 @@
         </div>
     </div>
     <input type="text" id="codeInput" placeholder="Enter code here">
+    <button id="submitButton">Submit</button>
     <script src="/js/script/font.js"></script>
 </body>
 </html>
