--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@
             <li><a href="/pages/font.html">Font</a></li>
             <li><a href="/pages/sun.html">sun</a></li>
             <li><a href="/pages/yourself.html">yourself</a></li>
+            <li><a href="/pages/gps.html">gps</a></li>
         </ul>
     </body>
 </html>
